@startuml
skinparam class {
    BackgroundColor<<Dominio>> Wheat
    BorderColor<<Dominio>> Tomato
}

class ImagenMemoria {
    + ejecutarMutacion(mutacion: Mutacion)
}

interface Consulta {
    consultarSobre(sistema: Any): Any?
}
ImagenMemoria ..> Consulta: corre en multi-hilo >
note bottom of Consulta
    // Nombre de cuentas con balance de $70
    banco.accounts.values
        .filter { it.balance == 70 }
        .map { it.nombre }
        .toSet()
end note

class Banco <<Dominio>> {
}
Consulta ..> Banco: lee >

class Cuenta <<Dominio>> {
    + id: String
    + nombre: String
    + balance: Monto
}
Banco "1" *--> "0..*" Cuenta

@enduml